--- a/02_homework/unit_02.html
+++ b/02_homework/unit_02.html
@@ -1,171 +1,203 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Unit 2. Homework</title>
+    <title>Unit 02</title>
 </head>
 
 <body>
-    <div>
-        <p>Task 1. Создайте две переменные a = 7 и b = 9. Выведите в консоль результа умножения a на b.</p>
+    <div class="container">
+        <h1>Unit 02. Основы ввода данных </h1>
+        <h2><a href="https://js2.itgid.info" target="_blank">JavaScript v.2.0 - курс Лущенко Александра</a></h2>
+
+        <section>
+            <p><b>Task 1.</b></p>
+            <p>Создайте две переменные a = 7 и b = 9. Выведите в консоль результа умножения a на b.</p>
+
+        </section>
+
+        <section>
+            <p><b>Task 2.</b></p>
+            <p>Создайте две переменные c = 7 и d = 9. Выведите на страницу в .out-2 результат деления c на d.</p>
+            <div class="out-2"></div>
+        </section>
+
+        <section>
+            <p><b>Task 3.</b></p>
+            <p>Создайте две переменные e = 3 и f = 5. Выведите на страницу в .out-3 результат сложения e + f.</p>
+            <div class="out-3"></div>
+        </section>
+
+        <section>
+            <p><b>Task 4.</b></p>
+            <p>Создайте две переменные e1 = '3' и f1 = 5. Выведите на страницу в .out-4 результат сложения e1 + f1.
+                Объясните разницу. </p>
+            <div class="out-4"></div>
+        </section>
+
+        <section>
+            <p><b>Task 5.</b></p>
+            <p>Создайте две переменные e2 = 3 и f2 = 0. Выведите на страницу в .out-5 результат деления e2 на f2.</p>
+            <div class="out-5"></div>
+        </section>
+
+        <section>
+            <p><b>Task 6.</b></p>
+            <p>Создайте две переменные e3 = 3 и f3 = 'Hello'. Выведите на страницу в .out-6 результат сложения двух
+                переменных. </p>
+            <div class="out-6"></div>
+        </section>
+
+        <section>
+            <p><b>Task 7.</b></p>
+            <p>Создайте две переменные e4 = 3 и f4 = 'Hello'. Выведите на страницу в .out-7 результат умножения двух
+                переменных.</p>
+            <div class="out-7"></div>
+        </section>
+
+        <section>
+            <p><b>Task 8.</b></p>
+            <p>Создайте input и кнопку. По нажатию на кнопку выполняется функция, которая выводит в консоль то, что пользователь ввел в input.</p>
+            <div class="form-control">Введите любые данные: <input type="text" class="i-8"></div>
+            <button class="button-primary b-8">Task-8</button>
+        </section>
+
+        <section>
+            <p><b>Task 9.</b></p>
+            <p> Создайте input и кнопку. По нажатию на кнопку выполняется функция, которая выводит на страницу, что
+                пользователь ввел в input. Добавьте очистку input после нажатия кнопки.</p>
+
+            <div class="form-control">Введите любые данные: <input type="number" class="i-9"></div>
+
+            <button class="button-primary b-9">Task-9</button>
+            <div class="out-9"></div>
+        </section>
+
+        <section>
+            <p><b>Task 10.</b></p>
+            <p>Создайте input и кнопку. По нажатию на кнопку выполняется функция, которая выводит на страницу число,
+                которое ввел пользователь умноженное на 10.</p>
+            <div class="form-control">Введите число: <input type="number" class="i-10"></div>
+            <button class="button-primary b-10">Task-10</button>
+            <div class="out-10"></div>
+        </section>
+
+        <section>
+            <p><b>Task 11.</b></p>
+            <p>Создайте input и кнопку. По нажатию на кнопку выполняется функция, которая выводит на страницу в .out-11
+                число, которое ввел пользователь и к нему добавленное число 10.</p>
+            <div class="form-control">Введите число: <input type="number" class="i-11"></div>
+            <button class="button-primary b-11">Task-11</button>
+            <div class="out-11"></div>
+        </section>
+
+        <section>
+            <p><b>Task 12.</b></p>
+            <p>Создайте два input (i-12_1 и i-12-2) и кнопку. В первый input пользователь вводит имя, во второе фамилию.
+                При нажатии кнопки выполняется функция, которая выводит в .out-12 строку 'Hello имя фамилия', где имя -
+                имя пользователя и фамилия - введенная фамилия.</p>
+            <div class="form-control">Введите имя: <input type="text" class="i-12_1"></div>
+            <div class="form-control">Введите фамилию: <input type="text" class="i-12_2"></div>
+            <button class="button-primary b-12">Task-11</button>
+            <div class="out-12"></div>
+        </section>
+
+        <section>
+            <p><b>Task 13.</b></p>
+            <p>Создайте два input и кнопку. В input пользователь вводит числа. При нажатии кнопки выполняется функция,
+                которая выводит сумму данных двух чисел на страницу в .out-13</p>
+            <div class="form-control">Введите 1ое число: <input type="text" class="i-13_1"></div>
+            <div class="form-control">Введите 2ое число: <input type="text" class="i-13_2"></div>
+            <button class="button-primary b-13">Task-13</button>
+            <div class="out-13"></div>
+        </section>
+
+        <section>
+            <p><b>Task 14.</b></p>
+            <p>Создайте input .i-14 и пропишите ему в html value = 77. С помощью JS измените value на 'Hello'.</p>
+            <div class="form-control">Нажмите кнопку <input type="text" class="i-14" value="77"></div>
+
+            <button class="button-primary b-14">Task-14</button>
+            <div class="out-14"></div>
+        </section>
+
+        <section>
+            <p><b>Task 15.</b></p>
+            <p>Создайте input i-15 и получите его в переменную y. В js выполните следующее присвоение: y.style.border =
+                '2px solid red' . Изучите результат операции.</p>
+            <div class="form-control">Input i-15 <input type="text" class="i-15"></div>
+
+            <button class="button-primary b-15">Task-15</button>
+        </section>
+
+        <section>
+            <p><b>Task 16.</b></p>
+            <p>Создайте два input type=number, куда пользователь может ввести числа. Выведите на страницу сумму данных
+                чисел по нажатию кнопки b-16.</p>
+            <div class="form-control">Введите 1ое число: <input type="text" class="i-16_1"></div>
+            <div class="form-control">Введите 2ое число: <input type="text" class="i-16_2"></div>
+            <button class="button-primary b-16">Task-16</button>
+            <div class="out-16"></div>
+        </section>
+
+        <section>
+            <p><b>Task 17.</b></p>
+            <p>Создайте input type="text" куда пользователь может ввести строку и число. Создайте функцию, которая
+                запускается по нажатию на кнопку. Получите значение из input в переменную t. А затем сделайте операцию t
+                = parseInt(t), и результат операции выведите в out-17. Прочитайте за эту операцию. Попробуйте по очереди
+                вводить 44, 44aaa, 44.3, a45 . Изучите вывод.</p>
+            <div class="form-control">Input i-17<input type="text" class="i-17"></div>
+
+            <button class="button-primary b-17">Task-17</button>
+            <div class="out-17"></div>
+        </section>
+
+        <section>
+            <p><b>Task 18.</b></p>
+            <p>Создайте input type="text" куда пользователь может ввести строку и число. Создайте функцию, которая
+                запускается по нажатию на кнопку. Получите значение из input в переменную t. А затем сделайте операцию t
+                = parseFloat(t), и результат операции выведите в консоль. Прочитайте за эту операцию. Попробуйте по
+                очереди вводить 44, 44aaa, 44.3, a45 . Изучите вывод.</p>
+            <div class="form-control">Введите: <input type="text" class="i-18"></div>
+
+            <button class="button-primary b-18">Task-18</button>
+            <div class="out-18"></div>
+        </section>
+
+        <section>
+            <p><b>Task 19.</b></p>
+            <p>Создайте два input type=number, куда пользователь может ввести отрицательные числа. Выведите на страницу
+                сумму данных чисел. Мы это делали! Зачем? Затем, что нужно понимать как влияет перевод в число с помощью
+                + и parseInt на отрицательные числа!!!</p>
+            <div class="form-control">Введите 1-ое отрицательно число: <input type="number" class="i-19_1"></div>
+            <div class="form-control">Введите 1-ое отрицательно число: <input type="number" class="i-19_2"></div>
+            <button class="button-primary b-19">Task-19</button>
+            <div class="out-19"></div>
+        </section>
+
+        <section>
+            <p><b>Task 20.</b></p>
+            <p>Создайте опросник, куда пользователь может ввести имя, фамилию, возраст, род занятий. И кнопку. По
+                нажатию кнопки выведите на страницу предложение 'Уважаемый Иван, Иванов, ваш возраст 33 года, по
+                професси вы ...' куда поставьте соответствующие данные из inputов.</p>
+
+            <div class="form-control">Введите ваше имя: <input type="text" class="first-name-quest"></div>
+            <div class="form-control">Введите вашу фамилию: <input type="text" class="last-name-quest"></div>
+            <div class="form-control">Введите ваш возраст: <input type="text" class="age"></div>
+            <div class="form-control">Введите вашу профессию: <input type="text" class="prof"></div>
+
+            <button class="button-primary b-20">Task-20</button>
+            <div class="out-20"></div>
+        </section>
+
     </div>
-    <hr>
 
-    <div>
-        <p>Task 2. Создайте две переменные c = 7 и d = 9. Выведите на страницу результат деления c на d.</p>
-        <div class="seg"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 3. Создайте две переменные e = 3 и f = 5. Выведите на страницу результат сложения e + f.</p>
-        <div class="sum"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 4. Создайте две переменные e1 = '3' и f1 = 5. Выведите на страницу результат сложения e1 + f1. Объясните разницу.</p>
-        <div class="concat"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 5. Создайте две переменные e2 = 3 и f2 = 0. Выведите на страницу результат деления e2 на f2.</p>
-        <div class="seg2"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 6. Создайте две переменные e3 = 3 и f3 = 'Hello'. Выведите на страницу результат сложения двух переменных.</p>
-        <div class="concat3"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 7. Создайте две переменные e4 = 3 и f4 = 'Hello'. Выведите на страницу результат умножения двух переменных.</p>
-        <div class="mul"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 8. Создайте input и кнопку. По нажатию на кнопку выполняется функция, которая выводит в консоль то, что пользователь ввел в input.</p>
-        <input type="text" class="int">
-        <button class="but">Go</button>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 9. Создайте input и кнопку. По нажатию на кнопку выполняется функция, которая выводит на страницу, что пользователь ввел в input. Добавьте очистку input после нажатия кнопки.</p>
-        <input type="text" class="int1">
-        <button class="but1">Go</button>
-        <div class="out1"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 10. Создайте input и кнопку. По нажатию на кнопку выполняется функция, которая выводит на страницу число, которое ввел пользователь умноженное на 10.</p>
-        <input type="text" class="int2">
-        <button class="but2">Go</button>
-        <div class="out2"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 11. Создайте input и кнопку. По нажатию на кнопку выполняется функция, которая выводит на страницу число, которое ввел пользователь и к нему добавленное число 10.</p>
-        <input type="text" class="int3">
-        <button class="but3">Go</button>
-        <div class="out3"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 12. Создайте два input и кнопку. В первый input пользователь вводит имя, во второе фамилию. При нажатии кнопки выполняется функция, которая выводит в консоль строку 'Hello имя фамилия', где имя - имя пользователя и фамилия - введенная фамилия.</p>
-
-        <p>Введите имя: <input type="text" class="first-name"></p>
-        <p>Введите фамилию: <input type="text" class="last-name"></p>
-
-        <button class="but-go">Go</button>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 13. Создайте два input и кнопку. В input пользователь вводит числа. При нажатии кнопки выполняется функция, которая выводит сумму данных двух чисел на страницу.</p>
-
-        <p>Введите первое число: <input type="text" class="num1"></p>
-        <p>Введите второе число: <input type="text" class="num2"></p>
-
-        <button class="but-sum">Go</button>
-        <div class="out-sum"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 14. Создайте input и пропишите ему в html value = 77. С помощью JS измените value на 'Hello'.</p>
-        <input type="text" class="num-change" value="77">
-        <button class="but-change">Go</button>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 15. Создайте input и получите его в переменную y. В js выполните следующее присвоение: y.style.border = '2px solid red'. Изучите результат операции.</p>
-        <input type="text" class="style-border">
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 16. Создайте два input type=number, куда пользователь может ввести числа. Выведите на страницу сумму данных чисел.</p>
-
-        <p>Введите первое число: <input type="number" class="type-num1"></p>
-        <p>Введите второе число: <input type="number" class="type-num2"></p>
-
-        <button class="but-sum-number">Go</button>
-        <div class="out-sum-number"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 17. Создайте input type="text" куда пользователь может ввести строку и число. Создайте функцию, которая запускается по нажатию на кнопку. Получите значение из input в переменную t. А затем сделайте операцию t = parseInt(t), и результат операции выведите в консоль. Прочитайте за эту операцию. Попробуйте по очереди вводить 44, 44aaa, 44.3, a45 . Изучите вывод.</p>
-        <input type="text" class="int4">
-        <button class="but4">Go</button>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 18. Создайте input type="text" куда пользователь может ввести строку и число. Создайте функцию, которая запускается по нажатию на кнопку. Получите значение из input в переменную t. А затем сделайте операцию t = parseFloat(t), и результат операции выведите в консоль. Прочитайте за эту операцию. Попробуйте по очереди вводить 44, 44aaa, 44.3, a45 . Изучите вывод.</p>
-        <input type="text" class="f1">
-        <button class="but-f1">Go</button>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 19. Создайте два input type=number, куда пользователь может ввести отрицательные числа. Выведите на страницу сумму данных чисел. Мы это делали! Зачем? Затем, что нужно понимать как влияет перевод в число с помощью + и parseInt на отрицательные числа!!!</p>
-
-        <p>Введите 1-ое отрицательно число: <input type="number" class="negative-num1"></p>
-        <p>Введите 1-ое отрицательно число: <input type="number" class="negative-num2"></p>
-
-        <button class="but-negative-sum">Go</button>
-        <div class="out-negative-num"></div>
-    </div>
-    <hr>
-
-    <div>
-        <p>Task 20. Создайте опросник, куда пользователь может ввести имя, фамилию, возраст, род занятий. И кнопку. По нажатию кнопки выведите на страницу предложение 'Уважаемый Иван, Иванов, ваш возраст 33 года, по професси вы ...' куда поставьте соответствующие данные из inputов.</p>
-
-        <p>Введите ваше имя: <input type="text" class="first-name-quest"></p>
-        <p>Введите вашу фамилию: <input type="text" class="last-name-quest"></p>
-        <p>Введите ваш возраст: <input type="text" class="age"></p>
-        <p>Введите вашу профессию: <input type="text" class="prof"></p>
-
-        <button class="but-start">Start</button>
-        <div class="out-quest"></div>
-    </div>
-    <hr>
-
-    <script src="script.js"></script>
+    <script src="unit_02.js"></script>
 </body>
 
 </html>
