--- a/03_add/unit_03.html
+++ b/03_add/unit_03.html
@@ -158,6 +158,38 @@
         <div class="out-17"></div>
     </section>
 
+    <section>
+        <p><b>Task 18.</b></p>
+        <p>Проделайте предыдущую задачу с помощью switch case.</p>
+        <div class="form-control">Введите колличество денег в долларах: <input type="number" class="i-181"></div>
+        <div class="form-control">Введите валюту (euro, rub, uah): <input type="text" class="i-182"></div>
+
+        <button class="button-primary b-18">Go</button>
+        <div class="out-18"></div>
+    </section>
+
+    <section>
+        <p><b>Task 19.</b></p>
+        <p>Создайте 2 input куда пользователь может ввести числа. В третий input - может ввести знак - минус, плюс, умножить, поделить. С помощью if, else if по нажатию кнопки выводите результат выбранной операции на страницу.</p>
+        <div class="form-control">Введите число: <input type="number" class="i-191"></div>
+        <div class="form-control">Введите число: <input type="number" class="i-192"></div>
+        <div class="form-control">Введите знак (+, -, *, /): <input type="text" class="i-193"></div>
+
+        <button class="button-primary b-19">Go</button>
+        <div class="out-19"></div>
+    </section>
+
+    <section>
+        <p><b>Task 20.</b></p>
+        <p>Проделайте предыдущую задачу с помощью switch case.</p>
+        <div class="form-control">Введите число: <input type="number" class="i-201"></div>
+        <div class="form-control">Введите число: <input type="number" class="i-202"></div>
+        <div class="form-control">Введите знак (+, -, *, /): <input type="text" class="i-203"></div>
+
+        <button class="button-primary b-20">Go</button>
+        <div class="out-20"></div>
+    </section>
+
 </div>
 
 <script src="unit_03.js"></script>
