--- a/04_homework/index.html
+++ b/04_homework/index.html
@@ -21,6 +21,12 @@
         <button class="button-primary b-1">Button</button>
     </section>
 
+    <section>
+        <p><b>Task 2.</b></p>
+        <p> Создайте input type=button - при нажатии на него выводите alert с номером задачи.</p>
+        <input type="button" class="i-1" value="Button">
+    </section>
+
 </div>
 
 <script src="script.js"></script>
