add homework unit 04

--- a/04_homework/index.html
+++ b/04_homework/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Unit 04</title>
+    <title>Document</title>
 </head>
 
 <body>
-<div class="container">
-    <h1>Unit 04. Работаем с формами: input, range, textarea, checkbox.</h1>
-    <h2><a href="https://js2.itgid.info" target="_blank">JavaScript v.2.0 - курс Лущенко Александра</a></h2>
+    <div>
+        <p>Task 1. Создайте button - при нажатии на него выводите alert с номером задачи.</p>
+        <button class="task-1">button</button>
+    </div>
+    <hr>
 
-    <section>
-        <p><b>Task 1.</b></p>
-        <p> Создайте button - при нажатии на него выводите alert с номером задачи.</p>
-        <button class="button-primary b-1">Button</button>
-    </section>
+    <div>
+        <p>Task 2. Создайте input type=button - при нажатии на него выводите alert с номером задачи.</p>
+        <input type="button" value="button" class="b-2">
+    </div>
+    <hr>
 
-    <section>
-        <p><b>Task 2.</b></p>
-        <p> Создайте input type=button - при нажатии на него выводите alert с номером задачи.</p>
-        <input type="button" class="i-1" value="Button">
-    </section>
+    <div>
+        <p>Task 3. Создайте p - при нажатии на него выводите alert с номером задачи.</p>
+        <p class="b-3">Нажми!</p>
+    </div>
+    <hr>
 
-</div>
+    <div>
+        <p>Task 4. Создайте input(checkbox) и button - при нажатии на него выводите true если checkbox выбран и false если нет.</p>
+        <input type="checkbox" class="ch-1">
+        <button class="b-4">button</button>
+    </div>
+    <hr>
 
-<script src="script.js"></script>
+    <div>
+        <p>Task 5. Создайте input(checkbox) и button. Добавьте value для checkbox. При нажатии на него выводите value если checkbox выбран и false если нет.</p>
+        <input type="checkbox" class="ch-2" value="hello world">
+        <button class="b-5">button</button>
+    </div>
+    <hr>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
