--- a/jsForm/index.html
+++ b/jsForm/index.html
@@ -6,12 +6,36 @@
 </head>
 <body>
 
-<input type="password" class="i-1">
-<button>Go</button>
+<!--<input type="password" class="i-1">-->
+<!--<button>Go</button>-->
+<!--<hr>-->
+
+<!--<input type="color" class="i-1">-->
+<!--<button>Go</button>-->
+<!--<hr>-->
+
+<!--<input type="date" class="i-1">-->
+<!--<button>Go</button>-->
+<!--<hr>-->
+
+<!--<input type="range" class="i-1">-->
+<!--<button>Go</button>-->
+<!--<span></span>-->
+
 <hr>
-<input type="color" class="i-2">
-<button class="b-2">Go</button>
-<p class="p-2">Какой-то текст...</p>
+
+<input type="checkbox" id="i2" value="hello"><label for="i2">Click me</label>
+<!--label - при клике на надпись, выделяется чекбокс, и прочее-->
+<button id="btn-1">Go</button>
+
+<hr>
+
+<form action="">
+    <textarea name="" id="two" cols="30" rows="10" name="n1"></textarea>
+    <input type="text" id="three" name="n2">
+    <button id="btn-2">Go</button>
+</form>
+<hr>
 
 <script src="script.js"></script>
 </body>
