add homework unit 04

--- a/jsForm/index.html
+++ b/jsForm/index.html
@@ -18,9 +18,9 @@
 <!--<button>Go</button>-->
 <!--<hr>-->
 
-<!--<input type="range" class="i-1">-->
-<!--<button>Go</button>-->
-<!--<span></span>-->
+<input type="range" class="i-1">
+<button>Go</button>
+<span></span>
 
 <hr>
 
