--- a/04_homework/index.html
+++ b/04_homework/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Unit 04</title>
 </head>
 
 <body>
@@ -39,6 +39,75 @@
         <p>Task 5. Создайте input(checkbox) и button. Добавьте value для checkbox. При нажатии на него выводите value если checkbox выбран и false если нет.</p>
         <input type="checkbox" class="ch-2" value="hello world">
         <button class="b-5">button</button>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 6. Создайте input(hidden) и button - при нажатии на него выводите alert с value прописанным в input.</p>
+        <input type="hidden" class="hid-6" value="hello">
+        <button class="b-6">button</button>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 7. Создайте input(password) и button - при нажатии на него выводите alert с value прописанным в input. Выводите в консоль предупреждение, если длина пароля меньше 6 символов.</p>
+        <input type="password" class="pas-7">
+        <button class="b-7">button</button>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 8. Создайте div и кнопку. При нажатии кнопки создавайте внутри div элемент input и кнопку (innerHTML). Добавьте на созданную кнопку событие - при клике выводить alert c содержимым созданного input.</p>
+        <div class="d-8"></div>
+        <button class="b-8">button</button>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 9. Создайте один input(radio) . и button - при нажатии на button выводите alert с value прописанным в активном (если он активен, если нет - то alert - false) radiobutton.</p>
+        <input type="radio" class="i-9" value="hi!">
+        <button class="b-9">button</button>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 10. Создайте input(color) и button - при нажатии на него окрашивайте div выбранным цветом.</p>
+        <input type="color" class="i-10">
+        <button class="b-10">button</button>
+        <div class="d-10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam culpa eligendi fugiat quibusdam recusandae sapiente vel velit! Beatae cupiditate delectus doloribus dolorum modi numquam quasi, quia quod sint ullam, voluptate!</div>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 11. Создайте input(color) - два элемента и button - при нажатии на кнопку присвойте цвет из первого input в value второго.</p>
+        <input type="color" class="i-111">
+        <input type="color" class="i-112">
+        <button class="b-11">button</button>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 12. Создайте input(date) и button - при нажатии на кнопку выводите на страницу выбранную дату.</p>
+        <input type="date" class="i-12">
+        <button class="b-12">button</button>
+        <div class="out-12">Выбранная дата: </div>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 13. Создайте input(range) и button - при нажатии на кнопку выводите на страницу значение из input. Добавьте событие oninput на range и тоже выводите значение на страницу.</p>
+        <input type="range" class="i-13">
+        <button class="b-13">button</button>
+        <span></span>
+        <div class="out-13"></div>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 14. Создайте text-area и button - при нажатии на кнопку выводите на страницу значение из textarea.</p>
+        <textarea name="" id="text-14" cols="30" rows="10"></textarea>
+        <button class="b-14">button</button>
+        <div class="out-14"></div>
     </div>
     <hr>
 
