add homework unit 04

--- a/04_homework/index.html
+++ b/04_homework/index.html
@@ -111,6 +111,15 @@
     </div>
     <hr>
 
+    <div>
+        <p>Task 15. Создайте text-area, input и button - при нажатии на кнопку выводите текс из input в textarea и на страницу.</p>
+        <textarea name="" id="text-15" cols="30" rows="10"></textarea>
+        <input type="text" class="i-15">
+        <button class="b-15"></button>
+        <div class="out-15"></div>
+    </div>
+    <hr>
+
     <script src="script.js"></script>
 </body>
 
