--- a/04_homework/index.html
+++ b/04_homework/index.html
@@ -115,8 +115,22 @@
         <p>Task 15. Создайте text-area, input и button - при нажатии на кнопку выводите текс из input в textarea и на страницу.</p>
         <textarea name="" id="text-15" cols="30" rows="10"></textarea>
         <input type="text" class="i-15">
-        <button class="b-15"></button>
+        <button class="b-15">button</button>
         <div class="out-15"></div>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 16. Создайте select и button - при нажатии на кнопку выводите на страницу value выбраннов в select option.
+        <div>
+            <select name="" id="" class="s-16">
+                <option>1</option>
+                <option>3</option>
+                <option>3</option>
+            </select>
+        </div>
+        <button class="b-16">button</button>
+        <div class="out-16"></div>
     </div>
     <hr>
 
