add files for unit 05

--- a/jsCycle/index.html
+++ b/jsCycle/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cycle</title>
-    <script src="script.js" defer></script>
+    <title>Cycle part 1</title>
 </head>
 <body>
+    <div class="one">1</div>
+    <div class="one">2</div>
+    <div class="one">3</div>
+    <hr>
+    <div><input type="radio" name="r" value="1" checked>Bla-bla</div>
+    <div><input type="radio" name="r" value="2">Ha-ha</div>
+    <div><input type="radio" name="r" value="3" >He-He</div>
+    <button>Push!</button>
 
+    <div id="out"></div>
+
+<script src="script.js"></script>
 </body>
 </html>
