del file and add files for lesson

--- a/jsForm/index2.html
+++ b/jsForm/index2.html
@@ -5,7 +5,51 @@
     <title>Forms</title>
 </head>
 <body>
+    <div>
+<!--        <h1>Работа с формами в JS</h1>-->
+<!--        <input type="range" id="one" min="-40" max="200" value="-10">-->
+<!--        <button>Push</button>-->
+<!--&lt;!&ndash;        <div class="out-1"></div>&ndash;&gt;-->
+<!--        <span>-10</span>-->
 
-<script src="script2.js"></script>
+        <hr>
+
+        <input type="checkbox" id="i2" value="hello"><label for="i2">Click me!</label>
+        <button id="b-1">b-1</button>
+
+        <hr>
+
+<!--        <h2>Работа с TextArea</h2>-->
+
+<!--        <textarea name="" id="two" cols="30" rows="10"></textarea>-->
+<!--        <button id="b-2">b-2</button>-->
+
+        <hr>
+
+<!--&lt;!&ndash;        this is my Test =)&ndash;&gt;-->
+<!--        <div>-->
+<!--            <p>-->
+<!--                Введите пароль: <input type="password" class="pass-1">-->
+<!--                <button class="b1">Go</button>-->
+<!--                <p>-->
+<!--                    <p>Вывести сюда:</p>-->
+<!--                    <textarea name="" id="t1" cols="30" rows="10"></textarea>-->
+<!--                    <p><button class="b2">Clean</button></p>-->
+<!--                </p>-->
+<!--            </p>-->
+<!--        </div>-->
+        <hr>
+
+        <form action="">
+            <!--action - содержит url куда будет отправлено содержание формы,
+                если ничего не указано, то страница просто перезагрузится-->
+            <textarea name="n1" id="two" cols="30" rows="10"></textarea>
+            <input type="text" id="three" name="n2">
+            <button id="b-2">b-2</button>
+        </form>
+        
+    </div>
+    <script src="script2.js"></script>
 </body>
+
 </html>
