homework unit 05 - full

--- a/00_homeworks/04_homework/index.html
+++ b/00_homeworks/04_homework/index.html
@@ -121,16 +121,50 @@
     <hr>
 
     <div>
-        <p>Task 16. Создайте select и button - при нажатии на кнопку выводите на страницу value выбраннов в select option.
+        <p>Task 16. Создайте select и button - при нажатии на кнопку выводите на страницу value выбраннов в select option.</p>
         <div>
-            <select name="" id="" class="s-16">
-                <option>1</option>
-                <option>3</option>
-                <option>3</option>
+            <select name="" id="s-16">
+                <option>Lorem ipsum dolor sit amet</option>
+                <option>Душа моя озарена неземной радостью</option>
+                <option>Проснувшись однажды утром после беспокойного</option>
             </select>
         </div>
         <button class="b-16">button</button>
         <div class="out-16"></div>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 17. Эту задачу пока не делаем!!!!!</p>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 18. Создайте select добавьте на него событие onchange. По данному событию выводите value выбранного option на страницу.</p>
+        <select name="" id="s-18">
+            <option value="one">Один</option>
+            <option value="two">Два</option>
+            <option value="three">Три</option>
+        </select>
+        <div class="out-18"></div>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 19. Создайте форму. В ней input(text) и input(password) - и кнопку. По нажатию кнопки выводите значение text и password в консоль!</p>
+        <p>Введите логин: <input type="text" class="login-1"></p>
+        <p>Введите логин: <input type="password" class="pass-1"></p>
+        <button class="b-19">Next</button>
+    </div>
+    <hr>
+
+    <div>
+        <p>Task 20. Создайте форму. В ней input(text) и input(password) - и кнопку. По нажатию кнопки выводите значение text и password в консоль! Используйте form.elements (читать).</p>
+        <form action="">
+            <p>Введите логин: <input type="text" class="login-2" name="login2"></p>
+            <p>Введите логин: <input type="password" class="pass-2" name="pass2"></p>
+            <button class="b-20">Next</button>
+        </form>
     </div>
     <hr>
 
