add random files

--- a/jsFunc/index.html
+++ b/jsFunc/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Функции</title>
 </head>
 <body>
+<div>
+    <p><button class="f-1">Function 1</button></p>
+    <p><button class="f-2">Function 2</button></p>
+    <p><button class="f-3">Function 3</button></p>
+</div>
 
+<script src="script.js"></script>
 </body>
 </html>
