--- a/jsCycle_path_2/index.html
+++ b/jsCycle_path_2/index.html
@@ -5,7 +5,13 @@
     <title>Cycle. Path 2</title>
 </head>
 <body>
+    <div>
+        <h1>Вложенные циклы</h1>
+        <div class="out"></div>
 
+
+
+    </div>
 <script src="script.js"></script>
 </body>
 </html>
