add lesson and examples and homework

--- a/jsFunc/index.html
+++ b/jsFunc/index.html
@@ -7,10 +7,14 @@
 <body>
 <div>
     <p><button class="f-1">Function 1</button></p>
+    <p><button class="f-12">Anonymous function</button></p>
+    <p><button class="f-13">Arrow function</button></p>
     <p><button class="f-2">Function 2</button></p>
+    <p><div class="d-2">Результат работы: </div></p>
     <p><button class="f-3">Function 3</button></p>
+    <p><div class="d-3">Результат работы: </div></p>
 </div>
 
-<script src="script.js"></script>
+<script src="js-lesson-2.js"></script>
 </body>
 </html>
