--- a/jsArray/index.html
+++ b/jsArray/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+    <div class="out"></div>
     <div class="out-1"></div>
     <div class="out-2"></div>
     <div class="out-3"></div>
