решение задачи про скобки

--- a/js_brackets/index.html
+++ b/js_brackets/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Задача про скобочки</title>
 </head>
 <body>
 <div>
@@ -14,6 +14,9 @@
         <p>(( ))( - не правильно</p>
         <p>Должны соответствовать математической логике - если скобка открылась должна закрыться.</p>
     </div>
+    <hr>
+    <h3>Решение:</h3>
+    <div class="out">Скобочки написаны: </div>
 </div>
 <script src="script.js"></script>
 </body>
