--- a/js_brackets/index.html
+++ b/js_brackets/index.html
@@ -18,6 +18,12 @@
     <h3>Решение:</h3>
     <div class="out">Скобочки написаны: </div>
 </div>
+<hr>
+<div>
+    <label>Введите скобочки: <input class="int-1"></label>
+    <button class="b-1">Проверить</button>
+    <div class="out-1">Скобочки написаны: </div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
