--- a/jsAddDelArray/index.html
+++ b/jsAddDelArray/index.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
-        <script src="script.js"></script>
+        <h1>Добавление и удаление элементов в массиве:</h1>
+
+        <div class="out-1"></div>
+        <div class="out-2"></div>
+        <div class="out-3"></div>
+
+        <script  src="script.js"></script>
     </body>
 </html>
