--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,13 @@
     </head>
     <body>
         <div>Тесты</div>
+        <div>
+            <div>
+                Введите число: <input class="i-1" type="text">
+                <button class="b-1">Go</button>
+                <div class="out-1"></div>
+            </div>
+        </div>
 
         <script src="script.js"></script>
     </body>
