--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,12 @@
                 <button class="b-1">Go</button>
                 <div class="out-1"></div>
             </div>
+
+            <dib>
+                <div>[1, 2, 2, 4, 5, 4] -> убрать одинаковые [1, 2, 4, 5]</div>
+                <button class="b-2">Pusk!</button>
+                <div class="out-2"></div>
+            </dib>
         </div>
 
         <script src="script.js"></script>
