--- a/other/cssForForme/index.html
+++ b/other/cssForForme/index.html
@@ -11,12 +11,13 @@
         <div class="container">
             <selection class="selection">
                 <input type="text" class="i-1" value="some text">
-                <button>Push</button>
+                <button class="b-1">Push</button>
                 <input type="number" class="i-2" value="3333">
                 <input type="password" class="i-3" value="some text">
                 <input type="date" class="i-4">
                 <hr>
             </selection>
         </div>
+    <script src="script.js"></script>    
     </body>
 </html>
